# Company-RAG-Studio

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
llm_wiki/: README.md  architecture.md  rag_pipeline.md
src/: __init__.py  config.py
src/crawler/: __init__.py  company_crawler.py
src/rag/: __init__.py  rag_chain.py  vector_store.py
src/search/: __init__.py  web_search.py
